--- a/alertmanager.yml.in
+++ b/alertmanager.yml.in
@@ -6,8 +6,13 @@ global:
   smtp_auth_password: '$SMTP_AUTH_PASSWORD'
 
 route:
-  receiver: 'email.hook'
+  receiver: 'web.hook'
+  group_wait: 0s
+  group_interval: 5s
 receivers:
-- name: 'email.hook'
-  email_configs:
-  - to: '$TO'
+  - name: 'email.hook'
+    email_configs:
+    - to: '$TO'
+  - name: 'web.hook'
+    webhook_configs:
+      - url: 'http://localhost:8080/alarm'
